Optimized version of fsp-ann system